# NTMF021-forest-fire

./: .gitignore  Dockerfile  README.md  config.dev.json  fire-at-home-client.rkt  fire-at-home-server.rkt  fire-other.rkt  fire.rkt
.github/workflows/: build-aarch64.yaml  build-x64.yaml
client/: Cargo.toml
client/src/: main.rs
fire-at-home/: computation.rkt  config.rkt  database.rkt  job-service.rkt  render-service.rkt  server.rkt  utils.rkt
fire-at-home/pages/: 404.html  index.html
